modules/ext.reveal.css
.mw-reveal-foo {
	float: left;
}

.column-container-grid {
    height: 100%;
    display: grid;
    grid-gap: 3px;
    grid-template-columns: repeat(3, auto);
    grid-template-rows: auto auto;
    grid-template-areas: 
        "t t t "
        "l c r ";
}

.div-top {
    grid-area: t;
}

.div-left {
    grid-area: l;
}

.div-center {
    grid-area: c;
}

.div-right {
    grid-area: r;
}

/*.gallery{
	display: grid !important;
    grid-template-columns: repeat(4, auto);
    grid-template-rows: auto;
    grid-gap: 3px;
}*/

